# cloudpulse

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: cost-service-ci.yml  frontend-ci.yml  ml-service-ci.yml
docs/: deployment.md
frontend/: Dockerfile  README.md  next.config.ts  package-lock.json  package.json  vitest.config.ts
frontend/src/: proxy.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/accounts/: page.tsx
frontend/src/app/anomalies/: page.tsx
frontend/src/app/api/auth/login/: route.ts
frontend/src/app/api/auth/logout/: route.ts
frontend/src/app/api/auth/me/: route.ts
frontend/src/app/api/auth/register/: route.ts
frontend/src/app/api/cost/[...path]/: route.ts
frontend/src/app/api/ml/[...path]/: route.ts
frontend/src/app/costs/: page.tsx
frontend/src/app/kubernetes/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/predictions/: page.tsx
frontend/src/app/register/: page.tsx
frontend/src/app/settings/: page.tsx
frontend/src/app/terraform/: page.tsx
frontend/src/components/: providers.tsx
frontend/src/components/charts/: cost-charts.tsx  k8s-treemap.tsx
frontend/src/components/dashboard/: chat-interface.tsx  dashboard-content.tsx  overview.test.tsx  overview.tsx  recent-activity.tsx  simulator-controls.tsx
frontend/src/components/layout/: app-layout.tsx  header.tsx  protected-route.tsx  sidebar.tsx
frontend/src/components/ui/: button.tsx  card.tsx  dialog.tsx  error-boundary.test.ts  error-boundary.tsx  input.tsx  scroll-area.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/lib/: api.test.ts  api.ts  mock-data.ts  simulator-store.test.ts  simulator-store.ts  utils.test.ts  utils.ts
frontend/src/lib/server/: proxy.ts  security.ts  session.ts
monitoring/grafana/dashboards/: cloudpulse-overview.json
monitoring/grafana/provisioning/dashboards/: dashboard.yml
monitoring/otel/: collector.yml
monitoring/prometheus/: alerts.yml  prometheus.yml
monitoring/tempo/: tempo.yml
services/cost-service/: .env.example  Dockerfile  README.md  pyproject.toml
services/cost-service/alembic/: env.py
services/cost-service/alembic/versions/: 20260331_000001_initial_schema.py  20260401_000002_account_setup_metadata.py  20260407_000003_add_chat_messages.py  20260407_000004_add_notification_channels.py
services/cost-service/app/: main.py  worker.py
services/cost-service/app/api/: __init__.py  admin.py  auth.py  chat.py  cloud_accounts.py  costs.py  health.py  kubernetes.py  notifications.py  router.py  terraform.py
services/cost-service/app/core/: __init__.py  cache.py  circuit_breaker.py  config.py  database.py  events.py  logging.py  observability.py  rate_limit.py  security.py  tracing.py
services/cost-service/app/models/: __init__.py  models.py
services/cost-service/app/schemas/: __init__.py  auth.py  schemas.py
services/cost-service/app/services/: __init__.py  audit_service.py  aws_cost_explorer.py  cost_sync.py  demo_seed.py  kubernetes_service.py  llm_service.py  notification_service.py  terraform_service.py
services/cost-service/app/services/providers/: _forecast.py  aws.py  azure.py  base.py  demo.py  factory.py  gcp.py
services/cost-service/scripts/: seed_data.py
services/cost-service/tests/: conftest.py  test_api.py  test_config.py  test_demo_seed.py  test_hardening.py  test_kubernetes.py  test_llm_service.py  test_notifications.py  test_services.py  test_terraform.py  test_unit.py
services/ml-service/: Dockerfile  README.md  pyproject.toml
services/ml-service/app/: main.py
services/ml-service/app/api/: __init__.py  auth.py  ml.py
services/ml-service/app/core/: __init__.py  config.py  observability.py  tracing.py
services/ml-service/app/models/: __init__.py  schemas.py
services/ml-service/app/services/: __init__.py  anomaly_detector.py  cost_predictor.py
services/ml-service/tests/: conftest.py  test_api.py  test_config.py  test_unit.py
