[project]
name = "ml-service"
version = "0.1.0"
description = "CloudPulse AI - ML Service for Cost Prediction and Anomaly Detection"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Abhisek Behera", email = "abhisek@cloudpulse.ai"}]

dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "numpy>=1.26.0",
    "pandas>=2.1.0",
    "scikit-learn>=1.4.0",
    "torch>=2.2.0, <2.3.0", # Using specific version for stability
    "transformers>=4.38.0",
    "gluonts>=0.14.0",
    "accelerate>=0.27.0",
    "httpx>=0.26.0",
    "redis>=5.0.0",
    "aio-pika>=9.3.0",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
